--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Kickback – Soccer Training Reimagined</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
   <header class="hero">
     <h1>Kickback</h1>
     <p>The Ultimate Solo Soccer Trainer</p>
@@ -15,7 +14,7 @@
 
   <main>
     <section class="intro">
-      <img src="images/kickback-demo.jpg" alt="Kickback in action" class="product-image">
+      <img src="images/kickback-demo.jpg" alt="Kickback in action" class="product-image" />
       <h2>Train Smarter, Kick Harder</h2>
       <p>Kickback uses an innovative flywheel system to launch the ball back to you — no teammates needed.</p>
       <p>Perfect your shots, improve control, and train anytime, anywhere.</p>
@@ -41,6 +40,5 @@
     <p>© 2025 Kickback. All rights reserved.</p>
     <p><a href="#contact">Contact</a></p>
   </footer>
-
 </body>
 </html>
